// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot if it's clicked 1`] = `
<section
  className="restaurant-card"
  tabIndex={0}
>
  <header>
    <section>
      <p
        key="Steak0"
      >
        Steak
      </p>
      <p
        key="American1"
      >
        American
      </p>
      <p
        key="Contemporary2"
      >
        Contemporary
      </p>
      <p
        key="Seafood3"
      >
        Seafood
      </p>
      <p
        key="Cafe4"
      >
        Cafe
      </p>
    </section>
  </header>
  <section
    className="card-description opened"
  >
    <h2>
      <a
        href="http://www.gaylordnational.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Hickory Steakhouse
      </a>
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f101",
              "M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z",
            ],
            "iconName": "angle-double-right",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </h2>
    <main
      className="open-hour"
    >
      <h4>
        Open:
      </h4>
      <p
        key="hour0"
      >
        Open Daily 5:30 PM-10:00 PM
      </p>
    </main>
    <Location />
  </section>
  <section
    className="additional-info"
  >
    <p
      className="tags"
    >
      <p
        key="tag0"
      >
        #
        Social
      </p>
      <p
        key="tag1"
      >
        #
        Food and Dining
      </p>
      <p
        key="tag2"
      >
        #
        Restaurants
      </p>
      <p
        key="tag3"
      >
        #
        Steakhouses
      </p>
    </p>
    <AttireLabel />
  </section>
  <footer
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    <p>
      Less
    </p>
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            320,
            512,
            Array [],
            "f106",
            "M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z",
          ],
          "iconName": "angle-up",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </footer>
</section>
`;

exports[`should match the snapshot if it's not clicked 1`] = `
<section
  className="restaurant-card"
  tabIndex={0}
>
  <header>
    <section>
      <p
        key="Steak0"
      >
        Steak
      </p>
      <p
        key="American1"
      >
        American
      </p>
      <p
        key="Contemporary2"
      >
        Contemporary
      </p>
      <p
        key="Seafood3"
      >
        Seafood
      </p>
      <p
        key="Cafe4"
      >
        Cafe
      </p>
    </section>
  </header>
  <section
    className="card-description"
  >
    <h2>
      <a
        href="http://www.gaylordnational.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Old Hickory Steakhouse
      </a>
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f101",
              "M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z",
            ],
            "iconName": "angle-double-right",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </h2>
    <main
      className="info"
    >
      <p>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                384,
                512,
                Array [],
                "f3c5",
                "M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z",
              ],
              "iconName": "map-marker-alt",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
        Oxon Hill, MD
      </p>
      <p>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f879",
                "M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z",
              ],
              "iconName": "phone-alt",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
        (301) 965-4000
      </p>
    </main>
  </section>
  <footer
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    <p>
      More
    </p>
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            320,
            512,
            Array [],
            "f107",
            "M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z",
          ],
          "iconName": "angle-down",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </footer>
</section>
`;
